# einkgen

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PLAN.md  QUICKSTART.md  README.md  TODOS.md  VERSION  pyproject.toml
firmware/inkplate10/: .gitignore  README.md  TESTING.md  inkplate10.ino  secrets.h.example
infra/: .gitignore  README.md  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
infra/lambda/: requirements-admin-api.txt  requirements-device-status.txt  requirements-generator.txt  requirements-inbound-email.txt  requirements-read-api.txt
infra/lib/: bucket.ts  cloudfront.ts  einkgen-stack.ts  inbound-email.ts  lambdas.ts  observability.ts  secrets.ts
infra/scripts/: check-errors.sh  deploy.sh  register-domain.example.sh  verify-deploy.sh
infra/test/: observability.test.ts
scripts/: sample_expansions.py
shortcuts/: README.md
src/einkgen/: __init__.py  (+1 more)
tests/: conftest.py  test_admin_cookie.py  test_angles.py  test_cli_history.py  test_cli_local.py  test_cli_queue.py  test_cli_status.py  test_convert.py  test_email_allowlist.py  test_email_parse.py  test_failures.py  test_generate.py  test_generated_queue.py  test_history.py  test_lambda_admin_api.py  test_lambda_device_status.py  test_lambda_generator.py  test_lambda_inbound_email.py  test_lambda_read_api.py  test_manifest.py  test_pipeline.py  test_prompt_library.py  test_publish.py  test_queue.py  test_s3.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+40 files in other folders)
